[package]
name = "magitian_git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-files = "0.6.2"
mime = "0.3.16"
serde = { version = "1.0.144", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.1"
dotenv = "0.15"
encoding = "0.2.33"
futures-util = "0.3.25"
